Format and max width and height

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       top: 0;
       left: 0;
     }
+    img, canvas {
+      max-height: 80vh;
+      max-width: 80vw;
+    }
   </style>
 </head>
 <body>
