--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <animate attributeName="height" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="58.00000000000001;40;40" keySplines="0 0.5 0.5 1;0 0.5 0.5 1"></animate>
 </rect>
 </svg>
+  <div id="loading_state">0%</div>
   <input type="file" id="imageUpload">
 </body>
 </html>
