--- a/index.html
+++ b/index.html
@@ -1,52 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script defer src="./face-api.min.js"></script>
-  <script defer src="./script.js"></script>
-  <title>Face Recognition</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <script defer src="./face-api.min.js"></script>
+    <script defer src="./script.js"></script>
+    <title>Face Recognition</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-    img, canvas {
-      max-height: 80vh;
-      max-width: 80vw;
-    }
-  </style>
-</head>
-<body>
-  <?xml version="1.0" encoding="utf-8"?>
-<svg id="loading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: auto; background: rgb(255, 255, 255) none repeat scroll 0% 0%; display: block; shape-rendering: auto;" width="200px" height="200px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
-<rect x="17.5" y="30" width="15" height="40" fill="#e15b64">
-  <animate attributeName="y" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="18;30;30" keySplines="0 0.5 0.5 1;0 0.5 0.5 1" begin="-0.2s"></animate>
-  <animate attributeName="height" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="64;40;40" keySplines="0 0.5 0.5 1;0 0.5 0.5 1" begin="-0.2s"></animate>
-</rect>
-<rect x="42.5" y="30" width="15" height="40" fill="#f8b26a">
-  <animate attributeName="y" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="20.999999999999996;30;30" keySplines="0 0.5 0.5 1;0 0.5 0.5 1" begin="-0.1s"></animate>
-  <animate attributeName="height" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="58.00000000000001;40;40" keySplines="0 0.5 0.5 1;0 0.5 0.5 1" begin="-0.1s"></animate>
-</rect>
-<rect x="67.5" y="30" width="15" height="40" fill="#abbd81">
-  <animate attributeName="y" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="20.999999999999996;30;30" keySplines="0 0.5 0.5 1;0 0.5 0.5 1"></animate>
-  <animate attributeName="height" repeatCount="indefinite" dur="1s" calcMode="spline" keyTimes="0;0.5;1" values="58.00000000000001;40;40" keySplines="0 0.5 0.5 1;0 0.5 0.5 1"></animate>
-</rect>
-</svg>
-  <div id="loading_state">0%</div>
-  <input type="file" id="imageUpload">
-</body>
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      img,
+      canvas {
+        max-height: 80vh;
+        max-width: 80vw;
+      }
+      .madeBy {
+        font-family: "Open Sans", cursive;
+        text-transform: uppercase;
+        font-size: 1.2rem;
+      }
+      .madeBy > span > a {
+        font-weight: 600;
+        color: black;
+        text-decoration: none;
+      }
+      .madeBy > span > a > img {
+        border-radius: 250px;
+        width: 25px;
+      }
+    </style>
+  </head>
+  <body>
+    <?xml version="1.0" encoding="utf-8"?>
+    <svg
+      id="loading"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      style="margin: auto; background: rgb(255, 255, 255) none repeat scroll 0% 0%; display: block; shape-rendering: auto;"
+      width="200px"
+      height="200px"
+      viewBox="0 0 100 100"
+      preserveAspectRatio="xMidYMid"
+    >
+      <rect x="17.5" y="30" width="15" height="40" fill="#e15b64">
+        <animate
+          attributeName="y"
+          repeatCount="indefinite"
+          dur="1s"
+          calcMode="spline"
+          keyTimes="0;0.5;1"
+          values="18;30;30"
+          keySplines="0 0.5 0.5 1;0 0.5 0.5 1"
+          begin="-0.2s"
+        ></animate>
+        <animate
+          attributeName="height"
+          repeatCount="indefinite"
+          dur="1s"
+          calcMode="spline"
+          keyTimes="0;0.5;1"
+          values="64;40;40"
+          keySplines="0 0.5 0.5 1;0 0.5 0.5 1"
+          begin="-0.2s"
+        ></animate>
+      </rect>
+      <rect x="42.5" y="30" width="15" height="40" fill="#f8b26a">
+        <animate
+          attributeName="y"
+          repeatCount="indefinite"
+          dur="1s"
+          calcMode="spline"
+          keyTimes="0;0.5;1"
+          values="20.999999999999996;30;30"
+          keySplines="0 0.5 0.5 1;0 0.5 0.5 1"
+          begin="-0.1s"
+        ></animate>
+        <animate
+          attributeName="height"
+          repeatCount="indefinite"
+          dur="1s"
+          calcMode="spline"
+          keyTimes="0;0.5;1"
+          values="58.00000000000001;40;40"
+          keySplines="0 0.5 0.5 1;0 0.5 0.5 1"
+          begin="-0.1s"
+        ></animate>
+      </rect>
+      <rect x="67.5" y="30" width="15" height="40" fill="#abbd81">
+        <animate
+          attributeName="y"
+          repeatCount="indefinite"
+          dur="1s"
+          calcMode="spline"
+          keyTimes="0;0.5;1"
+          values="20.999999999999996;30;30"
+          keySplines="0 0.5 0.5 1;0 0.5 0.5 1"
+        ></animate>
+        <animate
+          attributeName="height"
+          repeatCount="indefinite"
+          dur="1s"
+          calcMode="spline"
+          keyTimes="0;0.5;1"
+          values="58.00000000000001;40;40"
+          keySplines="0 0.5 0.5 1;0 0.5 0.5 1"
+        ></animate>
+      </rect>
+    </svg>
+    <div id="loading_state">0%</div>
+    <input type="file" id="imageUpload" />
+
+    <div class='madeBy'>
+      made with <i class="icon ion-heart"></i> and a little bit of code by &nbsp;
+       <span>
+         <a href="https://github.com/filiptronicek"><img src="http://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/WebDevSimplified"><img src="http://github.com/WebDevSimplified.png"></a>
+        </span>
+      </div>
+  </body>
 </html>
