Better loading and branding

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         font-family: "Open Sans", cursive;
         text-transform: uppercase;
         font-size: 1.2rem;
+        position: absolute;
+        bottom: 2%;
       }
       .madeBy > span > a {
         font-weight: 600;
@@ -129,13 +131,13 @@
         ></animate>
       </rect>
     </svg>
-    <div id="loading_state">0%</div>
+    <div id="loading_state"></div>
     <input type="file" id="imageUpload" />
 
     <div class='madeBy'>
       made with <i class="icon ion-heart"></i> and a little bit of code by &nbsp;
        <span>
-         <a href="https://github.com/filiptronicek"><img src="http://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/WebDevSimplified"><img src="http://github.com/WebDevSimplified.png"></a>
+         <a href="https://github.com/filiptronicek"><img src="http://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/WebDevSimplified"><img src="http://github.com/WebDevSimplified.png"></a> on &nbsp;<a href="https://github.com/filiptronicek/Avengers-AI"><img src="http://github.com/github.png"></a>
         </span>
       </div>
   </body>
