--- a/index.html
+++ b/index.html
@@ -9,54 +9,16 @@
       type="text/css"
       href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
     />
+    <link rel="stylesheet" href="assets/css/styles.css">
     <script defer src="./face-api.min.js"></script>
     <script defer src="./script.js"></script>
     <title>Face Recognition</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
-
-      canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-      img,
-      canvas {
-        max-height: 80vh;
-        max-width: 80vw;
-      }
-      .madeBy {
-        font-family: "Open Sans", cursive;
-        text-transform: uppercase;
-        font-size: 1.2rem;
-        position: absolute;
-        bottom: 2%;
-      }
-      .madeBy > span > a {
-        font-weight: 600;
-        color: black;
-        text-decoration: none;
-      }
-      .madeBy > span > a > img {
-        border-radius: 250px;
-        width: 25px;
-      }
-    </style>
   </head>
   <body>
     <?xml version="1.0" encoding="utf-8"?>
     <svg
+      style="display: none;"
       id="loading"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
