Serve images trough https

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class='madeBy'>
       made with <i class="icon ion-heart"></i> and a little bit of code by &nbsp;
        <span>
-         <a href="https://github.com/filiptronicek"><img src="http://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/WebDevSimplified"><img src="http://github.com/WebDevSimplified.png"></a> on &nbsp;<a href="https://github.com/filiptronicek/Avengers-AI"><img src="http://github.com/github.png"></a>
+         <a href="https://github.com/filiptronicek"><img src="https://github.com/filiptronicek.png"></a></span>&nbsp; &amp; &nbsp; <span><a href="https://github.com/WebDevSimplified"><img src="https://github.com/WebDevSimplified.png"></a> on &nbsp;<a href="https://github.com/filiptronicek/Avengers-AI"><img src="https://github.com/github.png"></a>
         </span>
       </div>
   </body>
